fixed colour picker on safari and made form flow more clear

--- a/applications/client/src/index.css
+++ b/applications/client/src/index.css
@@ -44,6 +44,12 @@ input[type=text], input[type=password] {
     border: 1px solid #707070;
 }
 
+input[type=color] {
+    height: 0;
+    outline: none;
+    border: none;
+}
+
 button {
     padding: 10px 30px;
     background: none;
